--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/home.css" />
     <title>Restaurant</title>
+    <h1>Some change</h1>
   </head>
   <body>
     <header>
